fix of horizontal scrollbar in gallery type to hide him on every browser

--- a/client/src/pages/gallery-type/gallery-type.component.scss
+++ b/client/src/pages/gallery-type/gallery-type.component.scss
@@ -155,6 +155,14 @@ a:not(:last-of-type) {
   opacity: .85;
   scroll-snap-type: x mandatory !important; // must be !important, otherwise it doesn't work
 
+  // Hide scrollbar for Chrome, Safari and Opera
+  &::-webkit-scrollbar {
+    display: none;
+  }
+  // Hide scrollbar for IE, Edge and Firefox
+  -ms-overflow-style: none;  // IE and Edge
+  scrollbar-width: none;  // Firefox
+
   .tip {
     max-width: 32rem;
     width: 100%;
